# Scopf

./: CMakeLists.txt  Makefile  README.md
dependencies/glad/: glad.c  glad.h
dependencies/loader/: texture.cpp  texture.hpp
dependencies/tools/: errorHandling.cpp  errorHandling.h
res/shaders/: basic_shader.glsl
src/: scop.cpp  scop_leak.cpp
src/BMPLoader/: BMPLoader.cpp  BMPLoader.h
src/Camera/: Camera.cpp  Camera.h
src/ObjLoader/: ObjLoader.cpp  ObjLoader.h
src/Shader/: Shader.cpp  Shader.h
src/VertexArray/: VertexArray.cpp  VertexArray.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
src/Window/: Window.cpp  Window.h
src/ft_glm/: ft_glm.cpp  ft_glm.h
src/utils/: utils.cpp  utils.h
tests/: tests_ft_glm.cpp  tests_ft_glm.h
